# gmaps-review-scraper

./: .env.example  .gitignore  LICENCE  README.md  api_response_debug.json  kuta1.json  kuta5.json  pyproject.toml  raw_response.json  raw_response_old.json  reviews.csv  reviews.json
docs/: architecture.md  usage.md
scripts/: lint.sh  run_tests.sh
src/review_scraper/: cli.py  config.py  driver.py  parser.py  scraper.py  utils.py
src/reviewscraper/: api_scraper.py  cli.py  config.py  driver.py  parser.py  scraper.py
tests/: test_cli.py  test_config.py  test_parser.py
