[project]
name = "review-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "aliepratama",email = "aliepratama2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "click (>=8.1.7,<9.0.0)",
    "blinker (==1.5)",
    "selenium-wire (>=5.1.0,<6.0.0)",
    "setuptools (>=80.7.1,<81.0.0)",
]

[tool.poetry]
packages = [
    { include = "reviewscraper", from = "src" }
]

[tool.poetry.scripts]
reviewscraper = "reviewscraper.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
mypy = "^1.15.0"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"

